--- a/alert/src/app/app.component.css
+++ b/alert/src/app/app.component.css
@@ -1,18 +1,29 @@
-.logo {
-  width: 40px;
-  height:40px;
-  margin:5px;
+.nav{
+  background: #ffffff;
+  padding: 10px 0px 10px 0px;
+  top: 0;
+}
+.nav-link{
   margin-top:8px;
-
+}
+.navbar-brand{
+  font-family: Tahoma;
+  font-size: 2rem;
+  color: #ec4e20;
+}
+.container-fluid{
+  padding:0px;
 }
 
+body{
+  color: #12130f;
+  background: #f4f5f7;
+}
 .footer {
   width: 100%;
   height: 200px;
   padding: 60px;
   line-height: 60px;
-  background-color: #fbfbfb;
-  color: #ff9505;
   text-align: center;
 }
 
