--- a/alert/src/app/app.component.html
+++ b/alert/src/app/app.component.html
@@ -1,14 +1,5 @@
 <ul class="nav nav-fixed-top p-0">
-  <h1 class="navbar-brand">TaizCorp</h1>
-  <li class="nav-item" routerLink="live">
-    <a class="nav-link">LIVE</a>
-  </li>
-  <li class="nav-item" routerLink="settings">
-    <a class="nav-link">ADMIN</a>
-  </li>
-  <li class="nav-item" routerLink="/">
-      <a class="nav-link">LOG OUT</a>
-    </li>
+  <h1 class="navbar-brand">Alert Device Demo Site</h1>
 </ul>
 <div class="container-fluid">
     <router-outlet></router-outlet>
