--- a/alert/src/app/live/live.component.css
+++ b/alert/src/app/live/live.component.css
@@ -1,13 +1,13 @@
-.main {
-  max-height: 650px;
-}
-.logs {
-  max-height: 650px;
-}
 .scroll{
-  min-height: 550px;
-  max-height: 550px;
+  min-height: 500px;
+  max-height: 500px;
   overflow:scroll;
+}
+.selected{
+  height:100px;
+}
+.log{
+  width: 100%;
 }
 .logtitle{
   height:100px;
